--- a/package.json
+++ b/package.json
@@ -1,10 +1,15 @@
 {
-  "homepage" : "https://shif1986.github.io/portfolio-2/",
+  "homepage": "https://shif1986.github.io/portfolio-2/",
   "name": "portfolio-2",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@emailjs/browser": "^3.11.0",
+    "@fortawesome/fontawesome-svg-core": "^6.5.1",
+    "@fortawesome/free-brands-svg-icons": "^6.5.1",
+    "@fortawesome/free-regular-svg-icons": "^6.5.1",
+    "@fortawesome/free-solid-svg-icons": "^6.5.1",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -22,8 +27,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy" : "gh-pages -d build"
-  
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
